    your calls and it should all work.  There was no way to deprecate this, so we just disabled it.
  * getExtent() will be deprecated and replaced with getSharedExtent().  This change enables 
    read sharing between modules.  See DataSeriesModule.hpp for the rules during the transition.

---------------------------------------------------------------

2012-05-11:
   * Release.  Repositories with packages seem to be functional for all OSs we build packages for.
     Version control has been moved to git and stored on github: https://github.com/dataseries
     User documentation available there also at https://github.com/dataseries/DataSeries/wiki
     Source builds now tested on OpenBSD, FreeBSD, and MacOS.  Packaging now handled using
     project-builder.

2012-04-26:
   * Add support for pack_scale_warn to disable warnings about losing precision.
   * Deprecate use of ExtentType * and ExtentType & in preference to ExtentType::Ptr.

2012-02-27:
   * Deprecate use of Extent * in preference to Extent::Ptr.

2012-01-26:
   * Improved support for nulls in union, sorting and expressions.

2012-01-23:
   * Rolling sum support

2011-10-14:
   * Generic sort module

2012-10-05:
   * Add random access support for fields, i.e. sub-extent pointers.

2011-08-20:
   * Add a rotating file sink to make it easier to switch files without delaying operations.

2011-08-01:
   * Add support for an ordered union.

2011-07-05:
   * Add support for star-join.

2011-06-13:
   * Release.  Repositories with packages seem to be functional for the few OSs I can easily test.

2011-05-23:
   * Fixes to get redhat packaging to work on centos, fedora, scilinux, and opensuse.

2011-05-21:
   * Fixes to get debian packaging to work on all supported versions of debian 
     and ubuntu.

2011-04-09: 
   * Add redhat packaging

2011-04-06:
   * Add documentation to lots of programs in the process of generating the
     debian packaging.

2010-11-02: